day 1 writing checkpoint